--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       e.preventDefault();
       const phone = form.phone.value;
 
-      const response = await fetch('YOUR_WEBHOOK_URL', {
+      const response = await fetch('http://localhost:5678/webhook-test/freecoffee', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify({ phone })
