--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h2>Redeem Your Free Coffee</h2>
-  <form method="POST" action="http://localhost:5678/webhook-test/freecoffee">
+  <form method="POST" action="https://c56e-144-82-8-167.ngrok-free.app/webhook-test/freecoffee">
     <label for="name">Enter your name:</label><br>
     <input type="text" id="name" name="name" required><br><br>
 
